updated soap client package